# audio-decode

./: .gitignore  BENCHMARK_RESULTS.md  COMPREHENSIVE_PITCH.md  CRITICAL_GAPS_ANALYSIS.md  CRITICAL_REVIEW.md  Cargo.toml  DESIGN_PARTNER_EMAILS.md  DEVEX_IMPROVEMENTS.md  DEVEX_STRATEGIES.md  Dockerfile.gpu  Dockerfile.test  FINAL_HONEST_RESULTS.md  FINDINGS.md  GPU_BENCHMARK_QUICKSTART.md  GPU_SETUP_GUIDE.md  LICENSE  MIGRATION_GUIDE.md  NEXT_STEPS.md  PERFORMANCE_SUMMARY.md  PLATFORM_BENCHMARK_COMPARISON.md  README.md  REAL_WORLD_EXAMPLE.md  VISION.md  benchmark_real_world.py  benchmark_results_darwin.json  benchmark_results_linux.json  benchmark_vs_openai_whisper.py  docker-compose.yml  pyproject.toml  test_dev_ux.py  test_extended_benchmarks.py  test_new_api.py  test_real_oss_project.py
benchmarks/: README.md  __init__.py  benchmark_a10g_clean.py  benchmark_a10g_gpu.py  benchmark_a10g_optimized.py  benchmark_cpu_only.py  benchmark_ctranslate2_only.py  benchmark_final.py  benchmark_gpu_both.py  benchmark_optimizations.py  benchmark_runner.py  benchmark_stt_real.py  benchmark_vs_openai_final.py  generate_test_audio.py  profile_hotspots.py  run_benchmarks.sh  run_linux_benchmark.sh  run_optimization_benchmarks.py  stt_benchmark_results.json  test_gpu_performance.py  test_performance.py
docs/: ARCHITECTURE.md  BENCHMARK_VS_OPENAI_WHISPER.md  GPU_LINUX_OPTIMIZATION_GUIDE.md  GPU_SETUP.md  GPU_SETUP_GUIDE.md  NEXT_STEPS.md  PERFORMANCE_SUMMARY.md  PLATFORM_BENCHMARK_COMPARISON.md  USER_GUIDE.md
docs/archive/: A10G_COMPREHENSIVE_BENCHMARK.md  A10G_OPTIMIZATION_RESULTS.md  A10G_OPTIMIZED_RESULTS.md  A10G_RESULTS.md  CPU_BENCHMARK_RESULTS.md  CRITICAL_GAPS_ANALYSIS.md  OPTIMIZATION_AND_DOCUMENTATION_SUMMARY.md  OPTIMIZATION_OPPORTUNITIES.md  OPTIMIZATION_REPORT.txt  OPTIMIZATION_RESULTS.md  PROFILING_SUMMARY.md  QUICK_WINS.md
examples/: youtube_showdown_results.json  youtube_transcription_showdown.py
fixtures/: generate_fixtures.py
fixtures/audio/: test_44khz_stereo.flac  wav_1s_mono_16000.flac  wav_1s_mono_8000.flac
notebooks/: AudioDecode_GPU_Benchmark.ipynb
scripts/: run_gpu_benchmark.sh  test_linux.sh
src/: decoder.rs  lib.rs  resampler.rs
src/audiodecode/: __init__.py  cache.py  cli.py  compat.py  core.py  dataloader.py  dataset.py  exceptions.py  fast.py  inference.py  registry.py
src/audiodecode/backends/: __init__.py  base.py  pyav_backend.py  soundfile_backend.py
tests/: conftest.py  test_batch_processing.py  test_beam_search_tuning.py  test_hotwords.py  test_inference.py  test_inference_edge_cases.py  test_progress_feedback.py  test_prompt_engineering.py  test_quality_thresholds.py  test_temperature_fallback.py  test_word_timestamps.py
tests/test_backends/: test_backend_interface.py  test_pyav_backend.py  test_soundfile_backend.py
