[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "audiodecode"
version = "0.2.0"
description = "Zero-copy, multi-backend audio decoding that doesn't shell out to ffmpeg"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AudioDecode Team"}
]
keywords = ["audio", "decode", "mp3", "librosa", "performance", "zero-copy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.26.0",
    "soundfile>=0.12.0",  # For WAV/FLAC native decoding
    "av>=12.0.0",  # PyAV for FFmpeg C library access (MP3, AAC, etc.)
]

[project.optional-dependencies]
rust = [
    # Optional Rust backend for batch processing and FLAC
]
inference = [
    "faster-whisper>=1.0.0",
    "tqdm>=4.66.0",  # Progress bars
]
cli = [
    "typer>=0.12.0",  # CLI framework
    "rich>=13.7.0",  # Beautiful CLI output
]
benchmarks = [
    "jiwer>=3.0.0",  # WER calculation
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
]
torch = [
    "torch>=2.1.0",
]
jax = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "pytest-timeout>=2.2.0",

    # Benchmarking baseline
    "librosa>=0.10.1",  # The library we're benchmarking against
    "psutil>=5.9.0",  # For memory and CPU monitoring
    "memory_profiler>=0.61.0",  # Detailed memory profiling

    # Code quality
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.12.0",
    "isort>=5.13.0",

    # Visualization
    "matplotlib>=3.8.0",  # For benchmark graphs
    "pandas>=2.1.0",  # For benchmark data analysis

    # Pre-commit
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/audiodecode/audiodecode"
Documentation = "https://audiodecode.readthedocs.io"
Repository = "https://github.com/audiodecode/audiodecode"
Issues = "https://github.com/audiodecode/audiodecode/issues"

[project.scripts]
audiodecode = "audiodecode.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "src"
module-name = "audiodecode._rust"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=audiodecode",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests as benchmarks",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/audiodecode"]
omit = [
    "*/tests/*",
    "*/benchmarks/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"tests/*" = ["B011"]  # Assert false

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "av.*",
    "soundfile.*",
    "librosa.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
